# clinical-fhir-extractor

./: .env.example  .gitignore  AUTHENTICATION.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  OCR_TESTING_README.md  PRODUCTION_SETUP.md  QUICKSTART.md  README.md  clinical_fhir.db  docker-compose.yml  example_clinical_note.txt  fhir-extraction.json  ground_truth_dataset_template.json  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.ps1  setup.sh  test_real_documents.py  test_tesseract_accuracy.py
app/: __init__.py  audit.py  auth.py  config.py  database.py  extractor.py  main.py  models.py  ocr_service.py  schemas.py
app/routes/: __init__.py  auth.py  extractions.py
frontend/: Dockerfile  README.md  app.js  index.html  nginx.conf  package-lock.json  package.json  style.css
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/context/: AuthProvider.tsx
frontend/src/hooks/: useApiKeys.ts  useAuth.ts  useExtractions.ts  useFHIR.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminDashboard.tsx  ApiKeys.tsx  AuditLogs.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/types/: index.ts
scripts/: __init__.py  create_admin.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py
